welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: ')' expected but '}' found.
	}
        ^Array1:21: error: ')' expected but '}' found.
}
^